same website but now using Handlebars!

--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -4,13 +4,12 @@
 <head>
     <meta charset="utf-8">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="../stylesheets/style.css" />
+    <link rel="stylesheet" href="stylesheets/style.css" />
     <title>My works</title>
 </head>
 
 <body>
     {{{body}}}
-
 </body>
 
 </html>
